--- a/playground/anthony/index.html
+++ b/playground/anthony/index.html
@@ -15,28 +15,40 @@
 
 		<h1>Boston Crime Data</h1>
 
-		<!--Select box-->
-		<form class="form-inline">
-			<div class="form-group">
-				<label for="var"><br></label>
-				<select class="form-control" id="var">
-					<option value="HeroinCrimes">Number of heroin crimes</option>
-					<option value="NumbNeedleReports">Number of needle pick-up requests</option>
-					<option value="WeedCrimes">Number of marijuana crimes</option>
-				</select>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<p>Here is some introductory text to our web page.</p>
+				</div>
 			</div>
-		</form>
-
-		<!--Line chart area-->
-		<div id="line-chart"></div>
+			<div class="row">
+				<div class="col">
+					<!--Select box-->
+					<form class="form-inline">
+						<div class="form-group">
+							<label for="var"><br></label>
+							<select class="form-control" id="var">
+								<option value="HeroinCrimes">Number of heroin crimes</option>
+								<option value="NumbNeedleReports">Number of needle pick-up requests</option>
+								<option value="WeedCrimes">Number of marijuana crimes</option>
+							</select>
+						</div>
+					</form>
+					<!--Line chart area-->
+					<div id="line-chart"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Load JS libraries: jQuery, bootstrap, D3 -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/d3.min.js"></script>
+	<script src="js/d3-tip.js"></script>
 
-	<!-- Our scripts -->
+		<!-- Our scripts -->
 	<script src="js/main.js"></script>
 	<script src="js/line-chart.js"></script>
 
