--- a/playground/anthony/index.html
+++ b/playground/anthony/index.html
@@ -15,7 +15,7 @@
 
 		<h1>Boston Crime Data</h1>
 
-		<div class="container">
+		<div class="container-grid">
 			<div class="row">
 				<div class="col">
 					<p>Here is some introductory text to our web page.</p>
